# webUFT

./: .gitignore  docker-compose.yml  example.env  memori.md  start.sh
Backend/: Dockerfile  bidang.json  main.py  pyproject.toml  requirements.txt
Backend/Database/: database.py  models.py
Backend/Feature/JWT/: main.py  validate_token.py
Backend/Feature/file_deletion/: main.py
Backend/Feature/image_processing/: main.py
Backend/Feature/security/: main.py
Backend/Router/: acara.py  akun.py  album.py  file.py  form.py  foto.py  karya.py
frontend/: .dockerignore  capacitor.config.json  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/acara/[id]/: page.tsx
frontend/app/admin/acara/[id]/edit/: page.tsx
frontend/app/admin/acara/baru/: page.tsx
frontend/app/admin/login/: page.tsx
frontend/app/components/subdashboard/: KelolaAcara.tsx  KelolaAkun.tsx  KelolaMigrasi.tsx
frontend/app/katalog/karya/: page.tsx
frontend/app/katalog/karya/[id]/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
nginx/: nginx.conf
