[project]
name = "webuft-backend"
version = "0.1.0"
description = "FastAPI backend for WebUFT"
requires-python = ">=3.11,<3.12"
dependencies = [
    "authlib==1.6.5",
    "fastapi==0.120.2",
    "flask==3.1.3",
    "pillow==11.2.1",
    "psycopg2-binary",
    "python-dotenv",
    "python-multipart==0.0.5",
    "sqlalchemy==2.0.49",
    "uvicorn[standard]==0.32.0",
]

